[package]
name = "image_grid"
version = "0.1.1"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_grid"
path = "src/lib.rs"

[dependencies]
ggez = "*"
clap = "*"
image = "*"
mint = "*"
regex = "*"
failure = "*"