[package]
name = "image_grid"
version = "0.1.2"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_grid"
path = "src/lib.rs"

[dependencies]
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
find_folder = "*"
clap = "*"
image = "*"
mint = "*"
regex = "*"
failure = "*"