[package]
name = "image_grid"
version = "0.1.2"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_grid"
path = "src/lib.rs"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
piston2d-opengl_graphics = "0.70.0"
pistoncore-glutin_window = "0.63.0"
find_folder = "*"
clap = "*"
image = "0.22.3"
mint = "*"
regex = "*"
failure = "*"